
include_HEADERS = \
	cuda_wrap.h \
	psc.h \
	psc_balance.h \
	psc_bnd.h \
	psc_bnd_fields.h \
	psc_bnd_fields_private.h \
	psc_bnd_particles.h \
	psc_bnd_particles_private.h \
	psc_bnd_private.h \
	psc_bnd_photons.h \
	psc_bnd_photons_private.h \
	psc_collision.h \
	psc_collision_private.h \
	psc_diag.h \
	psc_diag_item.h \
	psc_diag_item_private.h \
	psc_diag_private.h \
	psc_domainwindow.h \
	psc_domainwindow_private.h \
	psc_event_generator.h \
	psc_event_generator_private.h \
	psc_fields.h \
	psc_fields_as_c.h \
	psc_fields_as_fortran.h \
	psc_fields_as_single.h \
	psc_fields_c.h \
	psc_fields_cuda.h \
	psc_fields_fortran.h \
	psc_fields_private.h \
	psc_fields_single.h \
	psc_fields_sse2.h \
	psc_glue.h \
	psc_output_fields.h \
	psc_output_fields_c.h \
	psc_output_fields_item.h \
	psc_output_fields_item_private.h \
	psc_output_fields_private.h \
	psc_output_fields_collection.h \
	psc_output_fields_collection_private.h \
	psc_output_particles.h \
	psc_output_particles_private.h \
	psc_output_photons.h \
	psc_output_photons_private.h \
	psc_output_photons_xdmf.h \
	psc_particles.h \
	psc_particles_as_c.h \
	psc_particles_as_cbe.h \
	psc_particles_as_double.h \
	psc_particles_as_fortran.h \
	psc_particles_as_single.h \
	psc_particles_c.h \
	psc_particles_cbe.h \
	psc_particles_cuda.h \
	psc_particles_double.h \
	psc_particles_fortran.h \
	psc_particles_mix.h \
	psc_particles_private.h \
	psc_particles_single.h \
	psc_particles_sse2.h \
	psc_patchmanager.h \
	psc_photons.h \
	psc_pulse.h \
	psc_pulse_private.h \
	psc_push_fields.h \
	psc_push_fields_private.h \
	psc_push_particles.h \
	psc_push_particles_private.h \
	psc_randomize.h \
	psc_randomize_private.h \
	psc_sort.h \
	psc_sort_private.h \
	psc_testing.h \
	psc_debug.h \
	simd_cbe.h \
	simd_sse2.h
