
AM_CPPFLAGS = -I$(srcdir)/../include

noinst_LIBRARIES = libmrc.a libmrctest.a

libmrc_a_SOURCES = \
	mrc_mod.c \
	mrc_domain.c \
	mrc_domain_simple.c \
	mrc_crds.c \
	mrc_fld.c \
	mrc_params.c \
	mrc_ddc.c \
	mrc_profile.c \
	mrc_io.c \
	mrc_io_util.c \
	mrc_io_srv.c \
	mrc_io_asc.c \
	mrc_io_xdmf.c \
	mrc_dict.c \
	mrc_obj.c

libmrctest_a_SOURCES = \
	mrctest.c

