
AM_CPPFLAGS = -I$(srcdir)/../include

noinst_LTLIBRARIES = libmrc.la libmrctest.la

libmrc_la_SOURCES = \
	mrc_mod.c \
	mrc_domain.c \
	mrc_domain_simple.c \
	mrc_domain_multi.c \
	mrc_crds.c \
	mrc_fld.c \
	mrc_params.c \
	mrc_ddc.c \
	mrc_ddc_simple.c \
	mrc_ddc_multi.c \
	mrc_profile.c \
	mrc_io.c \
	mrc_io_util.c \
	mrc_io_srv.c \
	mrc_io_asc.c \
	mrc_io_xdmf.c \
	mrc_io_xdmf2.c \
	mrc_io_xdmf_lib.c \
	mrc_dict.c \
	mrc_obj.c \
	hilbert.c

libmrctest_la_SOURCES = \
	mrctest.c

